Sistema carrega as preferências do usuário sem exigir reinicio da aplicação